--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
-<!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<!-- include ar.js for A-Frame -->
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+	<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.2/aframe/build/aframe-ar-nft.js"></script>
+</head>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene 
-	vr-mode-ui="enabled: false;"
-	renderer="logarithmicDepthBuffer: true;"
-  	embedded
-  	arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
-
-	<a-maker
-		id="marker"
-		markerhandler emitevents="true" preset="hiro" size="1"
-		smooth="true"
-		smoothCount="10"
-		smoothTolerance=".01"
-		smoothThreshold="5"
-		>
-		<a-entity
-			id="box1"
-			geometry="primitive: box"
-			material="color: #FF9999; shader:flat"
-			position="0 1 1"
-			rotation="0 45 0"
-		>
-		</a-entity>
+  <a-scene embedded arjs>
+	<a-maker preset="hiro">
+		<a-box position="0 0.5 0" material="color: blue;">
+			<a-animation attribute="rotation"
+				dur="3000"
+				to="360 360 0"
+				repeat="indefinite"
+				easing="linear">
+			</a-animation>
+		</a-box>
 	</a-maker>
 	<a-entity camera></a-entity>
   </a-scene>
 </body>
+</html>
